--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit
-pandas
-chardet
-nltk
-pycaret
-joblib
+streamlit==1.24.1
+pandas==1.5.3
+chardet==5.1.0
+nltk==3.8.1
+pycaret==3.0.0
+joblib==1.2.0
+scikit-learn==1.2.2
+scipy==1.10.1
+numpy==1.23.5
